# mcp_builder

./: .gitignore  CHANGELOG.md  LICENSE  MCP-casestudies.md  MCP-template.md  README.MD  mcp.yaml  pyproject.toml  requirements.txt  server.json
.github/workflows/: ci.yml  publish-mcp.yml
contracts/: contract.snapshot.json
docs/: adding-tools.md
examples/: __init__.py
examples/stdio/: __init__.py  server.py  smoke_client.py
examples/streamable_http/: __init__.py  server.py  smoke_client.py
schemas/: mcp-template.schema.json
scripts/: generate_server_json.py  snapshot_contract.py  validate_template.py
